fix: align div in login page

--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -39,6 +39,7 @@ body {
 .form-login {
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100%;
   gap: 1rem;
 }
